// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Conditions should fail when anything else than a <Icon> is given as child in the 'icon' \`variant\` 1`] = `"You can only have <Icon> children in <Button> (got 'Label')!"`;

exports[`<Button> Conditions should fail when anything else than a text, <span> or <Icon> is given as child in the 'button' \`variant\` 1`] = `"You can only have text, <span> or <Icon> children in <Button> (got <div>)!"`;

exports[`<Button> Conditions should fail when more than 1 child is given in the 'icon' \`variant\` 1`] = `"<Button> must have exactly 1 child (got 2)!"`;

exports[`<Button> Conditions should fail when more than 1 text or <span> child is given in the 'button' \`variant\` 1`] = `"You cannot have more than 1 label in a 'button' \`variant\` of <Button> (got at least 2)!"`;

exports[`<Button> Conditions should fail when more than 1 text or <span> child is given in the 'button' \`variant\` 2`] = `"You cannot have more than 1 label in a 'button' \`variant\` of <Button> (got at least 2)!"`;

exports[`<Button> Conditions should fail when more than 1 text or <span> child is given in the 'button' \`variant\` 3`] = `"You cannot have more than 1 label in a 'button' \`variant\` of <Button> (got at least 2)!"`;

exports[`<Button> Conditions should fail when more than 3 children are given in the 'button' \`variant\` 1`] = `"<Button> cannot have more than 3 children (got 4)!"`;

exports[`<Button> Conditions should fail when no child is given 1`] = `"<Button> must have at least 1 child (got 0)!"`;

exports[`<Button> Conditions should fail when there are 2 or more <Icon> in a row in the 'button' \`variant\` 1`] = `"You cannot have 2 following icons children in a 'button' \`variant\` of <Button>, there must be a label between them!"`;

exports[`<Button> Snapshots and structure should render correctly a <span> label 1`] = `
<ButtonRoot
  className="lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <span
    key=".0"
  >
    Label
  </span>
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly a <span> label and an icon 1`] = `
<ButtonRoot
  className="lumx-button--has-right-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <span
    key=".0"
  >
    Label
  </span>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".1"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly a text label 1`] = `
<ButtonRoot
  className="lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <span
    key=".0"
  >
    Label
  </span>
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly a text label and an icon 1`] = `
<ButtonRoot
  className="lumx-button--has-right-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <span
    key=".0"
  >
    Label
  </span>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".1"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly an icon and a <span> label 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".0"
  />
  <span
    key=".1"
  >
    Label
  </span>
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly an icon and a text label 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".0"
  />
  <span
    key=".1"
  >
    Label
  </span>
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly an icon button with the 'button' \`variant\` 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".0"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly an icon button with the 'icon' \`variant\` 1`] = `
<ButtonRoot
  className="lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-icon"
>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly two icons and a <span> label 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button--has-right-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".0"
  />
  <span
    key=".1"
  >
    Label
  </span>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".2"
  />
</ButtonRoot>
`;

exports[`<Button> Snapshots and structure should render correctly two icons and a text label 1`] = `
<ButtonRoot
  className="lumx-button--has-left-icon lumx-button--has-right-icon lumx-button lumx-button--color-primary lumx-button--emphasis-high lumx-button--size-m lumx-button--theme-light lumx-button--variant-button"
>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".0"
  />
  <span
    key=".1"
  >
    Label
  </span>
  <Icon
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    key=".2"
  />
</ButtonRoot>
`;
